--- a/templates/admin/wellnessplan.html
+++ b/templates/admin/wellnessplan.html
@@ -31,7 +31,7 @@
                 />
               </div>
             </li>
-            <li><a href="#account">Account</a></li>
+            
             
             <li>
               <a href="#">
@@ -46,7 +46,7 @@
               </a>
             </li>
        
-            <li><a href="#schedule_slot">Schedule a Slot</a></li>
+            <li><a href="{{ url_for('.admin_schedule') }}">Schedule a Slot</a></li>
             <li>
               <a
                 href="{{ url_for('.index') }}"
