--- a/templates/admin/inventory.html
+++ b/templates/admin/inventory.html
@@ -317,10 +317,9 @@ input[type="number"] {
                 />
               </div>
             </li>
-            <li><a href="#account">Account</a></li>
             <li><a a href= "{{ url_for('.patient_wellnessplan') }}">Wellness Plan</a></li>
             <li>
-              <a href="#">
+              <a href="{{ url_for('.admin_dashboard') }}">
                 <div class="logo-nav">
                   <img
                     src="{{ url_for('static', filename='img/Logo-nobg.png') }}"
@@ -331,8 +330,7 @@ input[type="number"] {
                 </div>
               </a>
             </li>
-            <li><a href="#inventory">Inventory</a></li>
-            <li><a href="#schedule_slot">Schedule a Slot</a></li>
+            <li><a href="{{ url_for('.admin_schedule') }}">Schedule a Slot</a></li>
             <li>
               <a
                 href="{{ url_for('.index') }}"
